--- a/assets/style.css
+++ b/assets/style.css
@@ -58,6 +58,10 @@ h2 {
   min-height: 100px;
 }
 
+th {
+    text-align: center;
+}
+
 table {
   width:100%;
   border-spacing: 0;
@@ -98,11 +102,6 @@ tbody tr:nth-child(even) {
     0px;
   color: hsl(0, 0%, 100%);
   display: inline-block;
-  align-self: center;
-  font-size: 22px;
-  line-height: 22px;
-  margin: 16px 16px 16px 20px;
-  padding: 14px 34px;
   text-align: center;
   cursor: pointer;
 }
