added functionality to clear inputs on send

--- a/assets/style.css
+++ b/assets/style.css
@@ -115,6 +115,12 @@ button[disabled] {
   float: right;
 }
 
+#avg-salary {
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+}
+
 
 @media (max-width: 690px) {
   .btn {
